tests/test_assets/semantic/invalid/expressions/known_zero_divisor_compound_assignment.cog
ZERO :: 0;

test_known_zero_divisor_compound_assignment::(
    integer: i32
) -> void {
    integer /= 0;
    integer %= 0;

    integer /= ZERO;
    integer %= ZERO;

    integer /= cast(i32, 0);
    integer %= cast(i32, 0);

    integer /= (1 - 1);
    integer %= (1 - 1);
}
