tests/test_assets/semantic/invalid/expressions/known_zero_divisor_compound_assignment.expected
semantic error at line 6: division by zero
semantic error at line 7: remainder by zero
semantic error at line 9: division by zero
semantic error at line 10: remainder by zero
semantic error at line 12: division by zero
semantic error at line 13: remainder by zero
semantic error at line 15: division by zero
semantic error at line 16: remainder by zero
8 semantic errors generated.
